# multimedia-retrieval

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: inspect.frag  inspect.vert
cmake/: set_target_output_directories.cmake
data/: axis.ply  axis_x.ply  axis_y.ply  axis_z.ply
export/: 256.ply  256_orig.ply  statistics.csv  statistics_base.csv  statistics_normalized.csv  statistics_normalizing.csv  statistics_remeshing.csv  statistics_translating.csv  statistics_two_steps.csv  tsne_data.txt  tsne_labels.txt  tsne_names.txt
export/Airplane/: 61.ply  62.ply  63.ply  64.ply  65.ply  66.ply  67.ply  68.ply  69.ply  70.ply  71.ply  72.ply  73.ply  74.ply  75.ply  76.ply  77.ply  78.ply  79.ply  80.ply
export/Ant/: 100.ply  81.ply  82.ply  83.ply  84.ply  85.ply  86.ply  87.ply  88.ply  89.ply  90.ply  91.ply  92.ply  93.ply  94.ply  95.ply  96.ply  97.ply  98.ply  99.ply
export/Armadillo/: 281.ply  282.ply  283.ply  284.ply  285.ply  286.ply  287.ply  288.ply  289.ply  290.ply  291.ply  292.ply  293.ply  294.ply  295.ply  296.ply  297.ply  298.ply  299.ply  300.ply
export/Bearing/: 341.ply  342.ply  343.ply  344.ply  345.ply  346.ply  347.ply  348.ply  349.ply  350.ply  351.ply  352.ply  353.ply  354.ply  355.ply  356.ply  357.ply  358.ply  359.ply  360.ply
export/Bird/: 241.ply  242.ply  243.ply  244.ply  245.ply  246.ply  247.ply  248.ply  249.ply  250.ply  252.ply  253.ply  254.ply  255.ply  256.ply  257.ply  258.ply  259.ply  260.ply
export/Bust/: 301.ply  302.ply  303.ply  304.ply  305.ply  306.ply  307.ply  308.ply  309.ply  310.ply  311.ply  312.ply  313.ply  314.ply  315.ply  316.ply  317.ply  318.ply  319.ply  320.ply
export/Chair/: 101.ply  102.ply  103.ply  104.ply  105.ply  106.ply  107.ply  108.ply  109.ply  110.ply  111.ply  112.ply  113.ply  114.ply  115.ply  116.ply  117.ply  118.ply  119.ply  120.ply
export/Cup/: 21.ply  22.ply  23.ply  24.ply  25.ply  26.ply  27.ply  28.ply  29.ply  30.ply  31.ply  32.ply  33.ply  34.ply  35.ply  36.ply  37.ply  38.ply  39.ply  40.ply
export/Fish/: 221.ply  222.ply  223.ply  224.ply  225.ply  227.ply  228.ply  229.ply  230.ply  231.ply  232.ply  233.ply  234.ply  235.ply  236.ply  237.ply  238.ply  239.ply  240.ply
export/FourLeg/: 381.ply  382.ply  383.ply  384.ply  385.ply  386.ply  387.ply  388.ply  389.ply  390.ply  391.ply  392.ply  393.ply  394.ply  395.ply  396.ply  397.ply  398.ply  399.ply  400.ply
export/Glasses/: 41.ply  42.ply  43.ply  44.ply  45.ply  46.ply  47.ply  48.ply  49.ply  50.ply  51.ply  52.ply  53.ply  54.ply  55.ply  56.ply  57.ply  58.ply  59.ply  60.ply
export/Hand/: 181.ply  182.ply  183.ply  184.ply  185.ply  186.ply  187.ply  188.ply  189.ply  190.ply  191.ply  192.ply  193.ply  194.ply  195.ply  196.ply  197.ply  198.ply  199.ply  200.ply
export/Human/: 1.ply  10.ply  11.ply  12.ply  13.ply  14.ply  15.ply  16.ply  17.ply  18.ply  19.ply  2.ply  20.ply  3.ply  4.ply  5.ply  6.ply  7.ply  8.ply  9.ply
export/Mech/: 321.ply  322.ply  323.ply  324.ply  325.ply  326.ply  327.ply  328.ply  329.ply  330.ply  331.ply  332.ply  333.ply  334.ply  335.ply  336.ply  337.ply  338.ply  339.ply  340.ply
export/Normalized/Airplane/: 61.ply  65.ply  69.ply  70.ply  71.ply  74.ply  75.ply  77.ply  78.ply  79.ply  80.ply
export/Normalized/Ant/: 81.ply  82.ply  83.ply  84.ply  85.ply  86.ply  87.ply  88.ply  89.ply  90.ply  91.ply  93.ply  96.ply  97.ply  98.ply  99.ply
export/Normalized/Armadillo/: 281.ply  282.ply  283.ply  290.ply  291.ply  292.ply  296.ply  297.ply  298.ply  300.ply
export/Normalized/Bearing/: 341.ply  342.ply  343.ply  344.ply  345.ply  347.ply  348.ply  349.ply  351.ply  352.ply  354.ply  355.ply  356.ply  357.ply  359.ply
export/Normalized/Bird/: 244.ply  246.ply  247.ply  248.ply  249.ply  250.ply  251.ply  253.ply  254.ply  255.ply  256.ply  257.ply
export/Normalized/Bust/: 304.ply  306.ply  307.ply  308.ply  309.ply  310.ply  311.ply  313.ply  314.ply  318.ply  319.ply  (+1 more)
export/Octopus/: 121.ply  122.ply  123.ply  124.ply  125.ply  126.ply  127.ply  128.ply  129.ply  130.ply  131.ply  132.ply  133.ply  134.ply  135.ply  136.ply  137.ply  138.ply  139.ply  140.ply
export/Plier/: 201.ply  202.ply  203.ply  204.ply  205.ply  206.ply  207.ply  208.ply  209.ply  210.ply  211.ply  212.ply  213.ply  214.ply  215.ply  216.ply  217.ply  218.ply  219.ply  220.ply
export/Table/: 141.ply  142.ply  143.ply  144.ply  145.ply  146.ply  147.ply  148.ply  149.ply  150.ply  151.ply  152.ply  153.ply  154.ply  155.ply  156.ply  157.ply  158.ply  159.ply  160.ply
export/Teddy/: 161.ply  162.ply  163.ply  164.ply  165.ply  166.ply  167.ply  168.ply  169.ply  170.ply  171.ply  172.ply  173.ply  174.ply  175.ply  176.ply  177.ply  178.ply  179.ply  180.ply
export/Vase/: 361.ply  362.ply  363.ply  364.ply  365.ply  366.ply  367.ply  368.ply  369.ply  370.ply  371.ply  372.ply  373.ply  374.ply  375.ply  376.ply  377.ply  378.ply  379.ply  380.ply
export/results/: ANN_KNN_result_data.txt  ANN_RNN_result_data.txt  result_data_.txt  result_data_ANN_KNN.txt  result_data_ANN_RNN.txt  result_data_KNN_handmade.txt  result_labels_.txt
python/: accuracy.py  concat_images.py  histogram.py  test.py  tsne.py
src/mmr/: CMakeLists.txt
src/mmr/ANN/: CMakeLists.txt
src/mmr/include/: Eigen_PCA.h  database.h  database_gui.h  descriptors.h  emd.h  entry.h  feature_vector.h  features.h  mmr_viewer.h  normalization.h  settings.h  util.h
src/mmr/src/: database.cpp  database_gui.cpp  descriptors.cpp  descriptors.cpp.orig  emd.c  entry.cpp  feature_vector.cpp  features.cpp  main.cpp  mmr_viewer.cpp  normalization.cpp
(+4719 files in other folders)
